--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "bootstrap": "^4.6.0",
+    "date-fns": "^2.21.3",
     "firebase": "^8.3.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
